DAY-7: fml - gpt and  teemid  for the win - finishied though

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,10 @@
 			"mode": "auto",
 			"program": "${workspaceFolder}/main.go",
 			"env": {},
-			"args": []
+			"args": [
+				"6",
+				"2"
+			]
 		}
 	]
 }
